# Deadlock-Analytics

./: .env.example  .gitignore  README.md  docker-compose.yaml  gradle.properties  package-lock.json  settings.gradle.kts
.claude/: ARCHITECTURE.md  CLAUDE.md
.claude/rules/: error-handling.md  observability.md  solid-principles.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: build-container.yml  ci.yaml
app/: build.gradle.kts
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  build.gradle.kts  build_and_deploy.sh  docker-compose.yaml  generate_key.py  pyproject.toml  pytest.ini  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/.github/: copilot-instructions.md
charts/: helm-release.sh
frontend/: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
parser/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build_and_deploy.sh  docker-compose.yaml
parser/.devcontainer/: devcontainer.json
parser/docker/: .bash_history
parser/src/: config.rs  health_routes.rs  main.rs  replay_parser.rs
parser/src/demo/: decompressor.rs  downloader.rs  mod.rs  url_decoder.rs
parser/src/domain/: boss.rs  creep.rs  damage.rs  mod.rs  player.rs
parser/src/entities/: constants.rs  mod.rs
parser/src/handlers/: check_demo.rs  mod.rs  parse_demo.rs
parser/src/tracking/: boss_tracker.rs  creep_tracker.rs  mod.rs
parser/src/utils/: entity_position.rs  mod.rs  steam_id.rs
(+265 files in other folders)
