[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
reqwest = { version = "0.12.22", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bzip2 = "0.6"
haste = { git = "https://github.com/blukai/haste.git", features = ["deadlock"] }
base64 = "0.22.1"
regex = "1.11.1"
